ass1/lab1-testsuite/lab1-test-dir/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCpp.y
-----------------------------------------------------------------------------

state 252 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArglist -> Arglist                         (3)
	%start_pFBody -> FBody                             (4)
	%start_pArg -> Arg                                 (5)
	%start_pArgDecl -> ArgDecl                         (6)
	%start_pListArg -> ListArg                         (7)
	%start_pListStm -> ListStm                         (8)
	%start_pStm -> Stm                                 (9)
	%start_pTDefStm -> TDefStm                         (10)
	%start_pVar -> Var                                 (11)
	%start_pListVar -> ListVar                         (12)
	%start_pExp15 -> Exp15                             (13)
	%start_pExp14 -> Exp14                             (14)
	%start_pExp13 -> Exp13                             (15)
	%start_pExp12 -> Exp12                             (16)
	%start_pExp11 -> Exp11                             (17)
	%start_pExp10 -> Exp10                             (18)
	%start_pExp9 -> Exp9                               (19)
	%start_pExp8 -> Exp8                               (20)
	%start_pExp4 -> Exp4                               (21)
	%start_pExp3 -> Exp3                               (22)
	%start_pExp2 -> Exp2                               (23)
	%start_pExp1 -> Exp1                               (24)
	%start_pListId -> ListId                           (25)
	%start_pExp -> Exp                                 (26)
	%start_pExp5 -> Exp5                               (27)
	%start_pExp6 -> Exp6                               (28)
	%start_pExp7 -> Exp7                               (29)
	%start_pListExp -> ListExp                         (30)
	%start_pType -> Type                               (31)
	%start_pLit -> Lit                                 (32)
	%start_pListString -> ListString                   (33)
	Integer -> L_integ                                 (34)
	Double -> L_doubl                                  (35)
	Char -> L_charac                                   (36)
	String -> L_quoted                                 (37)
	Id -> L_Id                                         (38)
	Program -> ListDef                                 (39)
	Def -> 'using' ListId ';'                          (40)
	Def -> TDefStm ';'                                 (41)
	Def -> Type Id Arglist FBody                       (42)
	Def -> Type ListVar ';'                            (43)
	ListDef ->                                         (44)
	ListDef -> ListDef Def                             (45)
	Arglist -> '(' ListArg ')'                         (46)
	FBody -> ';'                                       (47)
	FBody -> '{' ListStm '}'                           (48)
	Arg -> Type ArgDecl                                (49)
	Arg -> 'const' Type ArgDecl                        (50)
	ArgDecl ->                                         (51)
	ArgDecl -> Id                                      (52)
	ArgDecl -> Id '=' Exp                              (53)
	ListArg ->                                         (54)
	ListArg -> Arg                                     (55)
	ListArg -> Arg ',' ListArg                         (56)
	ListStm ->                                         (57)
	ListStm -> ListStm Stm                             (58)
	Stm -> Exp ';'                                     (59)
	Stm -> Type ListVar ';'                            (60)
	Stm -> 'const' Type ListVar ';'                    (61)
	Stm -> 'return' Exp ';'                            (62)
	Stm -> 'while' '(' Exp ')' Stm                     (63)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (64)
	Stm -> 'for' '(' Arg ';' Exp ';' Exp ')' Stm       (65)
	Stm -> '{' ListStm '}'                             (66)
	Stm -> 'if' '(' Exp ')' Stm                        (67)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (68)
	Stm -> TDefStm ';'                                 (69)
	TDefStm -> 'typedef' Type Id                       (70)
	Var -> Id                                          (71)
	Var -> Id '=' Exp                                  (72)
	ListVar -> Var                                     (73)
	ListVar -> Var ',' ListVar                         (74)
	Exp15 -> Lit                                       (75)
	Exp15 -> ListId                                    (76)
	Exp15 -> '(' Exp ')'                               (77)
	Exp14 -> Exp14 '[' Exp ']'                         (78)
	Exp14 -> Exp14 '(' ListExp ')'                     (79)
	Exp14 -> Exp14 '.' Exp15                           (80)
	Exp14 -> Exp14 '->' Exp15                          (81)
	Exp14 -> Exp14 '++'                                (82)
	Exp14 -> Exp14 '--'                                (83)
	Exp14 -> Exp15                                     (84)
	Exp13 -> '++' Exp13                                (85)
	Exp13 -> '--' Exp13                                (86)
	Exp13 -> '*' Exp13                                 (87)
	Exp13 -> '!' Exp13                                 (88)
	Exp13 -> Exp14                                     (89)
	Exp12 -> Exp12 '*' Exp13                           (90)
	Exp12 -> Exp12 '/' Exp13                           (91)
	Exp12 -> Exp12 '%' Exp13                           (92)
	Exp12 -> Exp13                                     (93)
	Exp11 -> Exp11 '+' Exp12                           (94)
	Exp11 -> Exp11 '-' Exp12                           (95)
	Exp11 -> Exp12                                     (96)
	Exp10 -> Exp10 '<<' Exp11                          (97)
	Exp10 -> Exp10 '>>' Exp11                          (98)
	Exp10 -> Exp11                                     (99)
	Exp9 -> Exp9 '<' Exp10                             (100)
	Exp9 -> Exp9 '>' Exp10                             (101)
	Exp9 -> Exp9 '<=' Exp10                            (102)
	Exp9 -> Exp9 '>=' Exp10                            (103)
	Exp9 -> Exp10                                      (104)
	Exp8 -> Exp8 '==' Exp9                             (105)
	Exp8 -> Exp8 '!=' Exp9                             (106)
	Exp8 -> Exp9                                       (107)
	Exp4 -> Exp4 '&&' Exp5                             (108)
	Exp4 -> Exp5                                       (109)
	Exp3 -> Exp3 '||' Exp4                             (110)
	Exp3 -> Exp4                                       (111)
	Exp2 -> Exp3 '=' Exp2                              (112)
	Exp2 -> Exp3 '+=' Exp2                             (113)
	Exp2 -> Exp3 '-=' Exp2                             (114)
	Exp2 -> Exp3 '?' Exp ':' Exp2                      (115)
	Exp2 -> Exp3                                       (116)
	Exp1 -> 'throw' Exp1                               (117)
	Exp1 -> Exp2                                       (118)
	ListId -> Id                                       (119)
	ListId -> Id '::' ListId                           (120)
	Exp -> Exp1                                        (121)
	Exp5 -> Exp6                                       (122)
	Exp6 -> Exp7                                       (123)
	Exp7 -> Exp8                                       (124)
	ListExp ->                                         (125)
	ListExp -> Exp                                     (126)
	ListExp -> Exp ',' ListExp                         (127)
	Type -> 'int'                                      (128)
	Type -> 'bool'                                     (129)
	Type -> 'char'                                     (130)
	Type -> 'double'                                   (131)
	Type -> 'void'                                     (132)
	Type -> ListId                                     (133)
	Type -> Type '&'                                   (134)
	Lit -> Integer                                     (135)
	Lit -> Double                                      (136)
	Lit -> Char                                        (137)
	Lit -> ListString                                  (138)
	ListString -> String                               (139)
	ListString -> String ListString                    (140)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'char'         { PT _ (TS _ 34) }
	'const'        { PT _ (TS _ 35) }
	'do'           { PT _ (TS _ 36) }
	'double'       { PT _ (TS _ 37) }
	'else'         { PT _ (TS _ 38) }
	'for'          { PT _ (TS _ 39) }
	'if'           { PT _ (TS _ 40) }
	'int'          { PT _ (TS _ 41) }
	'return'       { PT _ (TS _ 42) }
	'throw'        { PT _ (TS _ 43) }
	'typedef'      { PT _ (TS _ 44) }
	'using'        { PT _ (TS _ 45) }
	'void'         { PT _ (TS _ 46) }
	'while'        { PT _ (TS _ 47) }
	'{'            { PT _ (TS _ 48) }
	'||'           { PT _ (TS _ 49) }
	'}'            { PT _ (TS _ 50) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArglist rule  3
	%start_pFBody   rule  4
	%start_pArg     rule  5
	%start_pArgDecl rule  6
	%start_pListArg rule  7
	%start_pListStm rule  8
	%start_pStm     rule  9
	%start_pTDefStm rule  10
	%start_pVar     rule  11
	%start_pListVar rule  12
	%start_pExp15   rule  13
	%start_pExp14   rule  14
	%start_pExp13   rule  15
	%start_pExp12   rule  16
	%start_pExp11   rule  17
	%start_pExp10   rule  18
	%start_pExp9    rule  19
	%start_pExp8    rule  20
	%start_pExp4    rule  21
	%start_pExp3    rule  22
	%start_pExp2    rule  23
	%start_pExp1    rule  24
	%start_pListId  rule  25
	%start_pExp     rule  26
	%start_pExp5    rule  27
	%start_pExp6    rule  28
	%start_pExp7    rule  29
	%start_pListExp rule  30
	%start_pType    rule  31
	%start_pLit     rule  32
	%start_pListString rule  33
	Integer         rule  34
	Double          rule  35
	Char            rule  36
	String          rule  37
	Id              rule  38
	Program         rule  39
	Def             rules 40, 41, 42, 43
	ListDef         rules 44, 45
	Arglist         rule  46
	FBody           rules 47, 48
	Arg             rules 49, 50
	ArgDecl         rules 51, 52, 53
	ListArg         rules 54, 55, 56
	ListStm         rules 57, 58
	Stm             rules 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69
	TDefStm         rule  70
	Var             rules 71, 72
	ListVar         rules 73, 74
	Exp15           rules 75, 76, 77
	Exp14           rules 78, 79, 80, 81, 82, 83, 84
	Exp13           rules 85, 86, 87, 88, 89
	Exp12           rules 90, 91, 92, 93
	Exp11           rules 94, 95, 96
	Exp10           rules 97, 98, 99
	Exp9            rules 100, 101, 102, 103, 104
	Exp8            rules 105, 106, 107
	Exp4            rules 108, 109
	Exp3            rules 110, 111
	Exp2            rules 112, 113, 114, 115, 116
	Exp1            rules 117, 118
	ListId          rules 119, 120
	Exp             rule  121
	Exp5            rule  122
	Exp6            rule  123
	Exp7            rule  124
	ListExp         rules 125, 126, 127
	Type            rules 128, 129, 130, 131, 132, 133, 134
	Lit             rules 135, 136, 137, 138
	ListString      rules 139, 140

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 44
	'char'         reduce using rule 44
	'double'       reduce using rule 44
	'int'          reduce using rule 44
	'typedef'      reduce using rule 44
	'using'        reduce using rule 44
	'void'         reduce using rule 44
	L_Id           reduce using rule 44
	%eof           reduce using rule 44

	Program        goto state 133
	ListDef        goto state 134

State 1


	'bool'         shift, and enter state 49
	'char'         shift, and enter state 50
	'double'       shift, and enter state 51
	'int'          shift, and enter state 52
	'typedef'      shift, and enter state 102
	'using'        shift, and enter state 132
	'void'         shift, and enter state 53
	L_Id           shift, and enter state 54

	Id             goto state 46
	Def            goto state 129
	TDefStm        goto state 130
	ListId         goto state 47
	Type           goto state 131

State 2


	'bool'         reduce using rule 44
	'char'         reduce using rule 44
	'double'       reduce using rule 44
	'int'          reduce using rule 44
	'typedef'      reduce using rule 44
	'using'        reduce using rule 44
	'void'         reduce using rule 44
	L_Id           reduce using rule 44
	%eof           reduce using rule 44

	ListDef        goto state 128

State 3


	'('            shift, and enter state 127

	Arglist        goto state 126

State 4


	';'            shift, and enter state 124
	'{'            shift, and enter state 125

	FBody          goto state 123

State 5


	'bool'         shift, and enter state 49
	'char'         shift, and enter state 50
	'const'        shift, and enter state 119
	'double'       shift, and enter state 51
	'int'          shift, and enter state 52
	'void'         shift, and enter state 53
	L_Id           shift, and enter state 54

	Id             goto state 46
	Arg            goto state 122
	ListId         goto state 47
	Type           goto state 118

State 6


	L_Id           shift, and enter state 54
	%eof           reduce using rule 51

	Id             goto state 120
	ArgDecl        goto state 121

State 7


	'bool'         shift, and enter state 49
	'char'         shift, and enter state 50
	'const'        shift, and enter state 119
	'double'       shift, and enter state 51
	'int'          shift, and enter state 52
	'void'         shift, and enter state 53
	L_Id           shift, and enter state 54
	%eof           reduce using rule 54

	Id             goto state 46
	Arg            goto state 116
	ListArg        goto state 117
	ListId         goto state 47
	Type           goto state 118

State 8


	'!'            reduce using rule 57
	'('            reduce using rule 57
	'*'            reduce using rule 57
	'++'           reduce using rule 57
	'--'           reduce using rule 57
	'bool'         reduce using rule 57
	'char'         reduce using rule 57
	'const'        reduce using rule 57
	'do'           reduce using rule 57
	'double'       reduce using rule 57
	'for'          reduce using rule 57
	'if'           reduce using rule 57
	'int'          reduce using rule 57
	'return'       reduce using rule 57
	'throw'        reduce using rule 57
	'typedef'      reduce using rule 57
	'void'         reduce using rule 57
	'while'        reduce using rule 57
	'{'            reduce using rule 57
	L_integ        reduce using rule 57
	L_doubl        reduce using rule 57
	L_charac       reduce using rule 57
	L_quoted       reduce using rule 57
	L_Id           reduce using rule 57
	%eof           reduce using rule 57

	ListStm        goto state 115

State 9


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	'bool'         shift, and enter state 49
	'char'         shift, and enter state 50
	'const'        shift, and enter state 108
	'do'           shift, and enter state 109
	'double'       shift, and enter state 51
	'for'          shift, and enter state 110
	'if'           shift, and enter state 111
	'int'          shift, and enter state 52
	'return'       shift, and enter state 112
	'throw'        shift, and enter state 79
	'typedef'      shift, and enter state 102
	'void'         shift, and enter state 53
	'while'        shift, and enter state 113
	'{'            shift, and enter state 114
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Stm            goto state 103
	TDefStm        goto state 104
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	Exp4           goto state 63
	Exp3           goto state 64
	Exp2           goto state 65
	Exp1           goto state 66
	ListId         goto state 105
	Exp            goto state 106
	Exp5           goto state 69
	Exp6           goto state 70
	Exp7           goto state 71
	Type           goto state 107
	Lit            goto state 73
	ListString     goto state 43

State 10


	'typedef'      shift, and enter state 102

	TDefStm        goto state 101

State 11


	L_Id           shift, and enter state 54

	Id             goto state 97
	Var            goto state 100

State 12


	L_Id           shift, and enter state 54

	Id             goto state 97
	Var            goto state 98
	ListVar        goto state 99

State 13


	'('            shift, and enter state 75
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 96
	ListId         goto state 67
	Lit            goto state 73
	ListString     goto state 43

State 14


	'('            shift, and enter state 75
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 95
	ListId         goto state 67
	Lit            goto state 73
	ListString     goto state 43

State 15


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 94
	ListId         goto state 67
	Lit            goto state 73
	ListString     goto state 43

State 16


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 93
	ListId         goto state 67
	Lit            goto state 73
	ListString     goto state 43

State 17


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 92
	ListId         goto state 67
	Lit            goto state 73
	ListString     goto state 43

State 18


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 91
	ListId         goto state 67
	Lit            goto state 73
	ListString     goto state 43

State 19


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 90
	ListId         goto state 67
	Lit            goto state 73
	ListString     goto state 43

State 20


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 89
	ListId         goto state 67
	Lit            goto state 73
	ListString     goto state 43

State 21


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	Exp4           goto state 88
	ListId         goto state 67
	Exp5           goto state 69
	Exp6           goto state 70
	Exp7           goto state 71
	Lit            goto state 73
	ListString     goto state 43

State 22


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	Exp4           goto state 63
	Exp3           goto state 87
	ListId         goto state 67
	Exp5           goto state 69
	Exp6           goto state 70
	Exp7           goto state 71
	Lit            goto state 73
	ListString     goto state 43

State 23


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	Exp4           goto state 63
	Exp3           goto state 64
	Exp2           goto state 86
	ListId         goto state 67
	Exp5           goto state 69
	Exp6           goto state 70
	Exp7           goto state 71
	Lit            goto state 73
	ListString     goto state 43

State 24


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	'throw'        shift, and enter state 79
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	Exp4           goto state 63
	Exp3           goto state 64
	Exp2           goto state 65
	Exp1           goto state 85
	ListId         goto state 67
	Exp5           goto state 69
	Exp6           goto state 70
	Exp7           goto state 71
	Lit            goto state 73
	ListString     goto state 43

State 25


	L_Id           shift, and enter state 54

	Id             goto state 46
	ListId         goto state 84

State 26


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	'throw'        shift, and enter state 79
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	Exp4           goto state 63
	Exp3           goto state 64
	Exp2           goto state 65
	Exp1           goto state 66
	ListId         goto state 67
	Exp            goto state 83
	Exp5           goto state 69
	Exp6           goto state 70
	Exp7           goto state 71
	Lit            goto state 73
	ListString     goto state 43

State 27


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	ListId         goto state 67
	Exp5           goto state 82
	Exp6           goto state 70
	Exp7           goto state 71
	Lit            goto state 73
	ListString     goto state 43

State 28


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	ListId         goto state 67
	Exp6           goto state 81
	Exp7           goto state 71
	Lit            goto state 73
	ListString     goto state 43

State 29


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	ListId         goto state 67
	Exp7           goto state 80
	Lit            goto state 73
	ListString     goto state 43

State 30


	'!'            shift, and enter state 74
	'('            shift, and enter state 75
	'*'            shift, and enter state 76
	'++'           shift, and enter state 77
	'--'           shift, and enter state 78
	'throw'        shift, and enter state 79
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38
	L_Id           shift, and enter state 54
	%eof           reduce using rule 125

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Id             goto state 46
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	Exp4           goto state 63
	Exp3           goto state 64
	Exp2           goto state 65
	Exp1           goto state 66
	ListId         goto state 67
	Exp            goto state 68
	Exp5           goto state 69
	Exp6           goto state 70
	Exp7           goto state 71
	ListExp        goto state 72
	Lit            goto state 73
	ListString     goto state 43

State 31


	'bool'         shift, and enter state 49
	'char'         shift, and enter state 50
	'double'       shift, and enter state 51
	'int'          shift, and enter state 52
	'void'         shift, and enter state 53
	L_Id           shift, and enter state 54

	Id             goto state 46
	ListId         goto state 47
	Type           goto state 48

State 32


	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 44
	L_charac       shift, and enter state 45
	L_quoted       shift, and enter state 38

	Integer        goto state 39
	Double         goto state 40
	Char           goto state 41
	String         goto state 36
	Lit            goto state 42
	ListString     goto state 43

State 33


	L_quoted       shift, and enter state 38

	String         goto state 36
	ListString     goto state 37

State 34


	L_integ        shift, and enter state 35


State 35

	Integer -> L_integ .                                (rule 34)

	'!='           reduce using rule 34
	'%'            reduce using rule 34
	'&&'           reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	'*'            reduce using rule 34
	'+'            reduce using rule 34
	'++'           reduce using rule 34
	'+='           reduce using rule 34
	','            reduce using rule 34
	'-'            reduce using rule 34
	'--'           reduce using rule 34
	'-='           reduce using rule 34
	'->'           reduce using rule 34
	'.'            reduce using rule 34
	'/'            reduce using rule 34
	':'            reduce using rule 34
	';'            reduce using rule 34
	'<'            reduce using rule 34
	'<<'           reduce using rule 34
	'<='           reduce using rule 34
	'='            reduce using rule 34
	'=='           reduce using rule 34
	'>'            reduce using rule 34
	'>='           reduce using rule 34
	'>>'           reduce using rule 34
	'?'            reduce using rule 34
	'['            reduce using rule 34
	']'            reduce using rule 34
	'||'           reduce using rule 34
	%eof           reduce using rule 34


State 36

	ListString -> String .                              (rule 139)
	ListString -> String . ListString                   (rule 140)

	'!='           reduce using rule 139
	'%'            reduce using rule 139
	'&&'           reduce using rule 139
	'('            reduce using rule 139
	')'            reduce using rule 139
	'*'            reduce using rule 139
	'+'            reduce using rule 139
	'++'           reduce using rule 139
	'+='           reduce using rule 139
	','            reduce using rule 139
	'-'            reduce using rule 139
	'--'           reduce using rule 139
	'-='           reduce using rule 139
	'->'           reduce using rule 139
	'.'            reduce using rule 139
	'/'            reduce using rule 139
	':'            reduce using rule 139
	';'            reduce using rule 139
	'<'            reduce using rule 139
	'<<'           reduce using rule 139
	'<='           reduce using rule 139
	'='            reduce using rule 139
	'=='           reduce using rule 139
	'>'            reduce using rule 139
	'>='           reduce using rule 139
	'>>'           reduce using rule 139
	'?'            reduce using rule 139
	'['            reduce using rule 139
	']'            reduce using rule 139
	'||'           reduce using rule 139
	L_quoted       shift, and enter state 38
	%eof           reduce using rule 139

	String         goto state 36
	ListString     goto state 194

State 37

	%start_pListString -> ListString .                  (rule 33)

	%eof           accept


State 38

	String -> L_quoted .                                (rule 37)
